tests/snapshots/integration_tests__init_npins_wrapper_stdenv.snap
---
source: tests/integration_tests.rs
expression: wrapper_content
---
# Top-level default.nix generated by nix-template.
#
# Build with `nix-build` from the project root. The overlay in
# nix/overlay.nix is applied to nixpkgs so that `pkgs.hello` resolves to
# the locally defined package.
let
  sources = import ./npins;
  pkgs = (import sources.nixpkgs { }).extend (import ./nix/overlay.nix);
in
pkgs.hello
