tests/snapshots/integration_tests__php_with_extensions_template.snap
---
source: tests/integration_tests.rs
expression: stdout
---
{ lib
, php
, fetchFromGitHub
}:

let
  php = php83.buildEnv {
    extensions = ({ enabled, all }: enabled ++ (with all; [
      gd
      mysqli
      pdo
    ]));
  };
in
php.buildComposerProject2 (finalAttrs: {
  pname = "test-app";
  version = "1.0.0";

  src = fetchFromGitHub {
    owner = "CHANGE";
    repo = "test-app";
    rev = finalAttrs.version;
    sha256 = "0000000000000000000000000000000000000000000000000000";
  };

  vendorHash = "sha256-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=";

  meta = with lib; {
    description = "CHANGE";
    homepage = "https://github.com/CHANGE/test-app";
    license = licenses.mit;
    maintainers = with maintainers; [  ];
  };
})
