tests/snapshots/integration_tests__pnpm_basic_template.snap
---
source: tests/integration_tests.rs
assertion_line: 584
expression: stdout
---
{ lib
, stdenv
, fetchFromGitHub
, fetchPnpmDeps
, nodejs
, pnpm_10
, pnpmConfigHook
}:

stdenv.mkDerivation (finalAttrs: {
  pname = "example";
  version = "1.0.0";

  src = fetchFromGitHub {
    owner = "CHANGE";
    repo = finalAttrs.pname;
    rev = finalAttrs.version;
    sha256 = "0000000000000000000000000000000000000000000000000000";
  };

  nativeBuildInputs = [
    nodejs
    pnpmConfigHook
    pnpm_10
  ];

  pnpmDeps = fetchPnpmDeps {
    inherit (finalAttrs) pname version src;
    fetcherVersion = 3;
    hash = "sha256-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=";
  };

  meta = with lib; {
    description = "CHANGE";
    homepage = "https://github.com/CHANGE/example";
    license = licenses.mit;
    maintainers = with maintainers; [  ];
  };
})
